# SAFE-BMAD

./: .claude  .dockerignore  .env.example  .env.template  .gitignore  .gitmessage  .pre-commit-config.yaml  .prettierignore  .prettierrc  DEVELOPMENT_PROGRESS.md  README.md  S_AGENT_DEVELOPMENT_LOG.md  api_server.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  pyproject.toml  real_llm_analyzer.py  requirements-test.txt  requirements.txt  s_agent_demo_api.py  setup_api_keys.py  start_llm_test.py  story_2_2_acceptance_test_output.json
api/: DEMO_GUIDE.md  SYSTEM_INTEGRATION_README.md  alembic.ini  conftest.py  demo_app.py  demo_starter.py  main.py  main_demo.py  main_new.py  migrate.sh  monitoring_dashboard.html  pytest.ini  quick_demo.sh  quick_test.py  realtime_dashboard.html  reset-db.sh  rollback.sh  run.py  start_system.py  start_system.sh  test_logging_fix.py  test_runner.py  unified_demo.html
api/alembic/: env.py
api/app/: __init__.py  main_monitoring.py
api/reports/: README.md  performance_test_report.md  story_1_3_quality_summary.md  test_coverage_report.md
api/tests/: conftest.py  test_agents.py  test_auth.py  test_health.py  test_scenarios.py  test_users.py
config/: Dockerfile.api  Dockerfile.dev  Dockerfile.dev.ui  Dockerfile.ui  backup.sh  cache-cli.sh  dev-restart.sh  dev-start.sh  dev-stop.sh  flush-cache.sh  init-dev.sql  redis-dev.conf  restore.sh  test-connectivity.sh  test-health.sh  validate-env.sh
config/agents/: s_agent_example.yaml
config/llm/: example_agent_config.yaml  providers.yaml
core/llm/: types.py  (+3 more)
deployment/: deploy-low-memory.sh  docker-compose.low-memory.yml  health-check.sh  部署总结文档.md
docs/: LLM_INTEGRATION_SUMMARY.md  PORT_MANAGEMENT.md  SAFE项目简报.md  SAFE项目简报初稿.md  Vue3-Full-Stack-Architecture.md  development.md  environment-variables.md  epic-1-foundation.md  epic-8-optimization.md  prd.md  project-status.md  project-structure.md
tests/: README.md
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/: llm_test_frontend.html  s_agent_demo.html
(+154 files in other folders)
